--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,21 @@ version: '3.9'
 services:
   influxdb:
     image: influxdb:2.0
-    container_name: influxdb
+    container_name: insy-influxdb
     ports:
       - 8086:8086
     env_file:
       - .env
     entrypoint: ['./entrypoint.sh']
     volumes:
-      - $PWD/influxdb:/var/lib/influxdb
+      - ${PWD}/influxdb:/var/lib/influxdb
 
   telegraf:
-    image: viadonau-telegraf:1.19
-    container_name: telegraf
+    image: telegraf:1.19
+    container_name: insy-telegraf
     depends_on:
       - influxdb
     env_file:
       - .env
     volumes:
-      - $PWD/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:rw
-    command: ['./wait-for-it.sh', 'influxdb:8086', '--', 'telegraf', '--config', '/etc/telegraf/telegraf.conf']
+      - ${TELEGRAF_CFG_PATH}:/etc/telegraf/telegraf.conf:rw
