--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,14 @@ services:
       - .env
     entrypoint: ['./entrypoint.sh']
     volumes:
-      - $PWD/influxdb:/var/lib/influxdb
+      - ${PWD}/influxdb:/var/lib/influxdb
 
   telegraf:
-    image: viadonau-telegraf:1.19
+    image: telegraf:1.19
     container_name: telegraf
     depends_on:
       - influxdb
     env_file:
       - .env
     volumes:
-      - $PWD/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:rw
-    command: ['./wait-for-it.sh', 'influxdb:8086', '--', 'telegraf', '--config', '/etc/telegraf/telegraf.conf']
+      - ${TELEGRAF_CFG_PATH}:/etc/telegraf/telegraf.conf:rw
