Added all agents to telegraf.conf

--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -53,7 +53,7 @@
 
   ## Default flushing interval for all outputs. Maximum flush_interval will be
   ## flush_interval + flush_jitter
-  flush_interval = "2m"
+  flush_interval = "10s"
   ## Jitter the flush interval by a random amount. This is primarily to avoid
   ## large write spikes for users running a large number of telegraf instances.
   ## ie, a jitter of 5s and interval 10s means flushes will happen every 10-15s
@@ -135,6 +135,11 @@
 ###############################################################################
 
 
+
+##################################################
+#                BottleNecks                     #
+##################################################
+
 [[inputs.http]]
   urls = ["https://opendata.doris-info.at/doris/api/1.0/bottleneck/getStatus?VIADONAU_PARTNER_KEY=opendata"]
   data_format = "json_v2"
@@ -146,6 +151,7 @@
       tags = ["objectID", "objectName"]
 
 
+
 [[inputs.http]]
   urls = ["https://opendata.doris-info.at/doris/api/1.0/bottleneck/list?VIADONAU_PARTNER_KEY=opendata"]
   data_format = "json_v2"
@@ -155,3 +161,159 @@
     [[inputs.http.json_v2.object]]
       path = "bottlenecksList"
       tags = ["objectID", "objectName"]
+
+
+
+##################################################
+#                BridgeClearance                 #
+##################################################
+ 
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/bridgeclearance/getStatus?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "bridgeclearance_status"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "bridgeClearanceStatusList"
+     tags = ["objectID", "objectName"]
+
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/bridgeclearance/list?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "bridgeclearance_list"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "bridgeclearanceList"
+     tags = ["objectID", "objectName"]
+
+
+
+##################################################
+#                FairwaySection                  #
+##################################################
+ 
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/fairwaysection/getStatus?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "fairwaysection_status"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "fairwaySectionStatusList"
+     tags = ["objectID", "objectName"]
+
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/fairwaysection/list?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "fairwaysection_list"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "fairwaySectionList"
+     tags = ["objectID", "objectName"]
+
+
+
+##################################################
+#                Gauges                          #
+##################################################
+ 
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/gauge/getStatus?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "gauge_status"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "gaugeStatusList.#.currentMeasure"
+     tags = ["objectID", "objectName"]
+
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/gauge/list?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "gauge_list"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "gaugeList"
+     tags = ["objectID", "objectName"]
+
+
+
+##################################################
+#                Locks                           #
+##################################################
+ 
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/lock/getStatus?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "lock_status"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "lockStatusList"
+     tags = ["objectID", "objectName"]
+
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/lock/list?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "lock_list"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "lockList"
+     tags = ["objectID", "objectName"]
+
+
+
+##################################################
+#                LockTraffic                     #
+##################################################
+
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/lock/traffic/getStatus?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "lock_traffic_status"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "lockTrafficStatusList"
+     tags = ["objectID", "objectName"]
+
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/lock/traffic/list?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "lock_traffic_list"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "lockTrafficList"
+     tags = ["objectID", "objectName"]   
+
+
+
+##################################################
+#                LockWind                        #
+##################################################
+
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/lock/wind/getStatus?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "lock_wind_status"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "lockWindStatusList"
+     tags = ["objectID", "objectName"]
+
+[[inputs.http]]
+ urls = ["https://opendata.doris-info.at/doris/api/1.0/lock/wind/list?VIADONAU_PARTNER_KEY=opendata"]
+ data_format = "json_v2"
+ name_override = "lock_wind_list"
+
+ [[inputs.http.json_v2]]
+   [[inputs.http.json_v2.object]]
+     path = "lockWindList"
+     tags = ["objectID", "objectName"]  
