changed volume from /var/lib/influxdb to /var/lib/influxdb2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - settings.env
     entrypoint: ['./entrypoint.sh']
     volumes:
-      - ./influxdb:/var/lib/influxdb
+      - ./influxdb:/var/lib/influxdb2
     networks:
       - proj_2223_viadonau_network
 
